RTC_P4_WDT_Example01.cydsn/BUILD.log
--------------- Build Started: 08/12/2020 15:09:22 Project: RTC_P4_WDT_Example01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'Time1_ISR_Handler':
main.c:326:8: error: 'Timer1IntrMask' undeclared (first use in this function)
     if(Timer1IntrMask==Timer1_INTR_MASK_TC)
        ^
main.c:326:8: note: each undeclared identifier is reported only once for each function it appears in
main.c:303:13: warning: unused variable 'Timer1Count' [-Wunused-variable]
     uint32  Timer1Count;
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 08/12/2020 15:09:22 ---------------
